--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
+  "name": "team-profile-generator",
+  "version": "1.0.0",
   "dependencies": {
-    "inquirer": "^8.2.4"
+    "inquirer": "^8.2.4",
+    "jest": "^29.5.0"
   }
+  
 }
